kubernetes/autocomplete.es/deployment.yaml
# kubectl create secret generic google-key --from-file=key.json=gcp-credential.json
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: autocomplete
  labels:
    app: autocomplete
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autocomplete
  template:
    metadata:
      labels:
        app: autocomplete
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: google-key
      - name: web-certs
        secret:
          secretName: tls-cert-key
      containers:
      - name: autocomplete
        image: gcr.io/typeahead-183622/github-rickcrawford-gcp-autocomplete.es
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
          readOnly: true
        - name: web-certs
          mountPath: /var/secrets/certs
          readOnly: true
        ports:
        - containerPort: 80
        - containerPort: 443
