kubernetes/autocomplete.es/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: autocomplete
  name: autocomplete
  namespace: default
spec:
  ports:
  - name: port-1
    port: 80
    protocol: TCP
    targetPort: 80
  - name: port-2
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: autocomplete
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
