kubernetes/autocomplete.es/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: autocomplete-ingress
spec:
  backend:
    serviceName: autocomplete
    servicePort: 80
  tls:
  - secretName: tls-cert-key
